--- a/rustfmt/Dockerfile
+++ b/rustfmt/Dockerfile
@@ -12,10 +12,10 @@ LABEL "maintainer"="Bruno Tavares <connect+githubactions@bltavares.com>"
 RUN rustup component add rustfmt
 
 RUN apt-get update -qq && apt-get install -qqy --no-install-recommends \
-  curl=7.52* \
+  curl=7.68.0 \
   jq=1.5* \
-  bash=4.4* \
-  git=1:2.11* \
+  bash=4.4.18 \
+  git=1:2.11.4 \
   && rm -rf /var/lib/apt/lists/*
 
 COPY lib.sh /lib.sh
